# OpenNfr_E2_Gui-6.3

./: Navigation.py  README.md  configure.ac  enigma2.bb  mytest.py
lib/python/Plugins/Extensions/: Makefile.am
lib/python/Plugins/Extensions/Infopanel/: Flash_local.py  QuickMenu.py  Softcam.py  Softcamedit.py  eparted.py  plugin.py
lib/python/Plugins/Extensions/MediaPortal/: LICENSE  Makefile.am  keymap.xml  plugin.py
lib/python/Plugins/Extensions/MediaPortal/additions/: Makefile.am  additions.xml  additions_user.xml
lib/python/Plugins/Extensions/MediaPortal/logos/: Makefile.am
lib/python/Plugins/Extensions/MediaPortal/resources/: MPEuronewsUriResolver.py  MPHLSPUriResolver.py  MPLivestreamcomUriResolver.py  MPYoutubeUriResolver.py  Makefile.am  RadioVisualization.py  animations.xml  api.py  cannalink.py  choiceboxext.py  config.py  configlistext.py  coverhelper.py  cvevosignalgoextractor.py  debuglog.py  eightieslink.py  fusion.py  hlsplayer.py  hosters.xml  imports.py  keyboardext.py  m3u8.py  menuhelper.py  messageboxext.py  mp_globals.py  mp_hlsp.py  mp_hlsp_httpplayer.py  mp_hlsp_m3u8.py  mpscreen.py  mtvdelink.py  nexx.py  pininputext.py  realdebrid.py  showAsThumb.py  simple_lru_cache.py  simplelist.py  simpleplayer.py  streams.py  tipps.txt  tmdb.py  (+6 more)
lib/python/Plugins/Extensions/MediaPortal/skins_720/: Makefile.am
lib/python/Plugins/Extensions/MediaPortal/userfiles/: Makefile.am  _MP_American.m3u  (+5 more)
lib/python/Plugins/Extensions/NFR4XBoot/: download_images.py  nfr4xboot.py  plugin.py
lib/python/Plugins/Extensions/mpgz/: plugin.py  update.py
(+545 files in other folders)
